@@ -9,6 +9,9 @@ import com.piotrek.gamecalendar.gaming_platform.GamingPlatformRepository;
 import lombok.Getter;
 
 import java.time.LocalDate;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.Set;
 
 public class GameTestObject {
@@ -28,11 +31,11 @@ public class GameTestObject {
         GamingPlatform windows = new GamingPlatform("Windows");
         GamingPlatform os_x = new GamingPlatform("OS X");
 
-        var windowsReleaseDate = GameReleaseDate.builder()
+        GameReleaseDate windowsReleaseDate = GameReleaseDate.builder()
                 .gamingPlatform(gamingPlatformRepo.save(windows))
                 .releaseDate(LocalDate.of(2007, 10, 26))
                 .build();
-        var osXReleaseDate = GameReleaseDate.builder()
+        GameReleaseDate osXReleaseDate = GameReleaseDate.builder()
                 .gamingPlatform(gamingPlatformRepo.save(os_x))
                 .releaseDate(LocalDate.of(2012, 4, 1))
                 .build();
@@ -40,7 +43,7 @@ public class GameTestObject {
         this.game = Game.builder()
                 .gameSeries(new GameSeries("The Witcher"))
                 .name("The Witcher")
-                .releaseDates(Set.of(releaseDateRepo.save(windowsReleaseDate), releaseDateRepo.save(osXReleaseDate)))
+                .releaseDates(new HashSet<>(Arrays.asList(releaseDateRepo.save(windowsReleaseDate), releaseDateRepo.save(osXReleaseDate))))
                 .build();
         return this;
     }
@@ -49,11 +52,11 @@ public class GameTestObject {
         GamingPlatform windows = new GamingPlatform("Windows");
         GamingPlatform os_x = new GamingPlatform("OS X");
 
-        var windowsReleaseDate = GameReleaseDate.builder()
+        GameReleaseDate windowsReleaseDate = GameReleaseDate.builder()
                 .gamingPlatform(windows)
                 .releaseDate(LocalDate.of(2007, 10, 26))
                 .build();
-        var osXReleaseDate = GameReleaseDate.builder()
+        GameReleaseDate osXReleaseDate = GameReleaseDate.builder()
                 .gamingPlatform(os_x)
                 .releaseDate(LocalDate.of(2012, 4, 1))
                 .build();
@@ -61,7 +64,7 @@ public class GameTestObject {
         this.game = Game.builder()
                 .gameSeries(new GameSeries("The Witcher"))
                 .name("The Witcher")
-                .releaseDates(Set.of(windowsReleaseDate, osXReleaseDate))
+                .releaseDates(new HashSet<>(Arrays.asList(windowsReleaseDate, osXReleaseDate)))
                 .build();
         return this;
     }
@@ -74,27 +77,27 @@ public class GameTestObject {
         GamingPlatform playstation = new GamingPlatform("PlayStation 3");
         GamingPlatform linux = new GamingPlatform("Linux");
 
-        var windowsReleaseDate = GameReleaseDate.builder()
+        GameReleaseDate windowsReleaseDate = GameReleaseDate.builder()
                 .gamingPlatform(gamingPlatformRepo.save(windows))
                 .releaseDate(LocalDate.of(2012, 8, 1))
                 .build();
 
-        var macOSReleaseDate = GameReleaseDate.builder()
+        GameReleaseDate macOSReleaseDate = GameReleaseDate.builder()
                 .gamingPlatform(gamingPlatformRepo.save(macOS))
                 .releaseDate(LocalDate.of(2012, 8, 1))
                 .build();
 
-        var xbox360ReleaseDate = GameReleaseDate.builder()
+        GameReleaseDate xbox360ReleaseDate = GameReleaseDate.builder()
                 .gamingPlatform(gamingPlatformRepo.save(xbox))
                 .releaseDate(LocalDate.of(2012, 8, 1))
                 .build();
 
-        var ps3ReleaseDate = GameReleaseDate.builder()
+        GameReleaseDate ps3ReleaseDate = GameReleaseDate.builder()
                 .gamingPlatform(gamingPlatformRepo.save(playstation))
                 .releaseDate(LocalDate.of(2012, 8, 1))
                 .build();
 
-        var linuxReleaseDate = GameReleaseDate.builder()
+        GameReleaseDate linuxReleaseDate = GameReleaseDate.builder()
                 .gamingPlatform(gamingPlatformRepo.save(linux))
                 .releaseDate(LocalDate.of(2014, 9, 1))
                 .build();
@@ -102,12 +105,12 @@ public class GameTestObject {
         this.game = Game.builder()
                 .gameSeries(new GameSeries("Counter Strike"))
                 .name("Counter Strike Global Offensive")
-                .releaseDates(Set.of(
+                .releaseDates(new HashSet<>(Arrays.asList(
                         gameReleaseDateRepo.save(windowsReleaseDate),
                         gameReleaseDateRepo.save(macOSReleaseDate),
                         gameReleaseDateRepo.save(xbox360ReleaseDate),
                         gameReleaseDateRepo.save(ps3ReleaseDate),
-                        gameReleaseDateRepo.save(linuxReleaseDate)))
+                        gameReleaseDateRepo.save(linuxReleaseDate))))
                 .build();
 
         return this;
@@ -120,27 +123,27 @@ public class GameTestObject {
         GamingPlatform playstation = new GamingPlatform("PlayStation 3");
         GamingPlatform linux = new GamingPlatform("Linux");
 
-        var windowsReleaseDate = GameReleaseDate.builder()
+        GameReleaseDate windowsReleaseDate = GameReleaseDate.builder()
                 .gamingPlatform(windows)
                 .releaseDate(LocalDate.of(2012, 8, 1))
                 .build();
 
-        var macOSReleaseDate = GameReleaseDate.builder()
+        GameReleaseDate macOSReleaseDate = GameReleaseDate.builder()
                 .gamingPlatform(macOS)
                 .releaseDate(LocalDate.of(2012, 8, 1))
                 .build();
 
-        var xbox360ReleaseDate = GameReleaseDate.builder()
+        GameReleaseDate xbox360ReleaseDate = GameReleaseDate.builder()
                 .gamingPlatform(xbox)
                 .releaseDate(LocalDate.of(2012, 8, 1))
                 .build();
 
-        var ps3ReleaseDate = GameReleaseDate.builder()
+        GameReleaseDate ps3ReleaseDate = GameReleaseDate.builder()
                 .gamingPlatform(playstation)
                 .releaseDate(LocalDate.of(2012, 8, 1))
                 .build();
 
-        var linuxReleaseDate = GameReleaseDate.builder()
+        GameReleaseDate linuxReleaseDate = GameReleaseDate.builder()
                 .gamingPlatform(linux)
                 .releaseDate(LocalDate.of(2014, 9, 1))
                 .build();
@@ -148,12 +151,12 @@ public class GameTestObject {
         this.game = Game.builder()
                 .gameSeries(new GameSeries("Counter Strike"))
                 .name("Counter Strike Global Offensive")
-                .releaseDates(Set.of(
+                .releaseDates(new HashSet<>(Arrays.asList(
                         windowsReleaseDate,
                         macOSReleaseDate,
                         xbox360ReleaseDate,
                         ps3ReleaseDate,
-                        linuxReleaseDate))
+                        linuxReleaseDate)))
                 .build();
 
         return this;
@@ -163,14 +166,14 @@ public class GameTestObject {
                                       GameReleaseDateRepository gameReleaseDateRepo) {
 
         GamingPlatform windows = new GamingPlatform("Windows");
-        var windowsReleaseDate = GameReleaseDate.builder()
+        GameReleaseDate windowsReleaseDate = GameReleaseDate.builder()
                 .gamingPlatform(gamingPlatformRepo.save(windows))
                 .releaseDate(LocalDate.of(2014, 3, 11))
                 .build();
 
         this.game = Game.builder()
                 .name("Hearthstone")
-                .releaseDates(Set.of(gameReleaseDateRepo.save(windowsReleaseDate)))
+                .releaseDates(new HashSet<>(Collections.singletonList(gameReleaseDateRepo.save(windowsReleaseDate))))
                 .build();
 
         return this;
@@ -179,14 +182,14 @@ public class GameTestObject {
     public GameTestObject hearthstone() {
 
         GamingPlatform windows = new GamingPlatform("Windows");
-        var windowsReleaseDate = GameReleaseDate.builder()
+        GameReleaseDate windowsReleaseDate = GameReleaseDate.builder()
                 .gamingPlatform(windows)
                 .releaseDate(LocalDate.of(2014, 3, 11))
                 .build();
 
         this.game = Game.builder()
                 .name("Hearthstone")
-                .releaseDates(Set.of(windowsReleaseDate))
+                .releaseDates(new HashSet<>(Collections.singletonList(windowsReleaseDate)))
                 .build();
 
         return this;
